--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -1,5 +1,4 @@
 .form{
-  background-color: white;
   border-radius: 5px;
   width: 550px;
   margin: 20px auto;
@@ -16,7 +15,7 @@
   padding: 5px;
 }
 
-.form__label{
+.form_label{
   width: 40%;
 }
 
