--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,20 @@
+.Title {
+  box-sizing: border-box;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 3em;
+  margin-bottom: 3em;
+  background-image: url("../assets/background.jpg");
+  background-position: right, top;
+  background-repeat: no-repeat, no-repeat;
+  color: #fff;
+}
+
+.Title-Subtitle {
+  color: #fff;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
